# Skidpad-Path-Planning---Control-for-Formula-Student---Kinematic-Bicycle-Model--ASU-Racing-Team-

./: README.md
dependencies/asurt_msgs/: CMakeLists.txt  README.md  package.xml
dependencies/asurt_msgs/msg/: Landmark.msg  LandmarkArray.msg  NodeStatus.msg  Roadstate.msg
kinematic_bicycle/: README.md  package.xml  setup.cfg  setup.py
kinematic_bicycle/config/: params.yaml
kinematic_bicycle/kinematic_bicycle/: SkidPadPathPlanningClass.py  __init__.py  bicycle_model.py  controller.py  main.py  path_gen.py  send_cones.py  totalTest.py
kinematic_bicycle/launch/: bicycle.rviz  kinematic_bicycle.launch.py  skidpad.launch.py
